docs: add workflow to trigger content DB sync
Adds a new step to the GitHub Actions workflow to trigger a content database synchronization. This step will be executed if the `SITE_URL` environment variable is set. It sends a PUT request to the specified `SITE_URL` with the `content.db` file as binary data, using a Bearer token for authorization. This ensures that changes to the content database are reflected in the deployed site.

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -86,3 +86,11 @@ jobs:
           git add content/en/ db/content.db
           git diff --quiet && git diff --staged --quiet || (git commit -m "docs: auto-translate content and update database" && git push)
 
+      - name: Trigger Content DB Sync
+        if: ${{ vars.SITE_URL }}
+        run: |
+          curl --fail --show-error -X PUT "${{ vars.SITE_URL }}" \
+            -H "Authorization: Bearer ${{ secrets.SYNC_TOKEN }}" \
+            -H "Content-Type: application/octet-stream" \
+            --data-binary "@db/content.db"
+
