feat: Integrate Bun for translation and database sync
Integrates Bun into the GitHub Actions workflow for synchronizing translations and the database. This change introduces the `oven-sh/setup-bun@v2` action to ensure Bun is available for the necessary scripts. The Bun setup step has been moved to the beginning of the job to make it available for all subsequent steps that rely on it.

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -14,6 +14,7 @@ jobs:
       contents: write
 
     steps:
+      - uses: oven-sh/setup-bun@v2
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
@@ -76,7 +77,6 @@ jobs:
           done
 
       - name: Commit and Push Translations and Database
-        uses: oven-sh/setup-bun@v2
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
