feat: Initialize .env.example with empty values
The .env.example file has been updated to provide default empty values for `SYNC_TOKEN` and `OPENAI_API_KEY`. This ensures that the example file is ready for users to populate with their specific credentials, promoting a smoother setup process. The `OPENAI_API_BASE` remains unchanged.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SYNC_TOKEN=88696a59-5c53-49e0-8caf-45f2f2461c14
+SYNC_TOKEN=
 OPENAI_API_BASE=https://litellm01.icncd.ru/v1
-OPENAI_API_KEY=sk-Xa7MFpR7MaRK9rgjLSFrmg
+OPENAI_API_KEY=
 SYNC_URL=https://iconicompany.ru/nextapi/sync
